base64 coder updated